--- a/projects/1.html
+++ b/projects/1.html
@@ -19,6 +19,8 @@
         <h1><p>Project 1: </p>
         <p>Zombie Bank</p></h1>
         <h2><p>Portfolio</p></h2>
+        <script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
+        
         <img src="images/1/conceptsketch.jpg" height="300" width="200">
         <h4><p>Concept Sketch</p></h4>
         <p></p>
