--- a/1.html
+++ b/1.html
@@ -16,10 +16,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><p>Project 1: </p>
+        <h1><p>Project 1:</p>
         <p>Zombie Bank</p></h1>
         <h2><p>Portfolio</p></h2>
-        <img src="images/1/conceptsketch.jpg" height="300" width="200">
+        <img src="projects/images/1/conceptsketch.jpg" height="300" width="200">
         <h4><p>Concept Sketch</p></h4>
         <p></p>
         <h3><p><a href="2.html">Next Project</a></p>
@@ -36,10 +36,10 @@
   <h3><p>2015, Studio Goetz</p></h3>       
   <script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
 
-  <img src="images/1/sectionNOZOMBIES2.jpg" height="300" width="500">
+  <img src="projects/images/1/sectionNOZOMBIES2.jpg" height="300" width="500">
   <h4><p>In-site</p></h4>
     
-  <img src="images/1/facade strategy.jpg" height="300" width="400">
+  <img src="projects/images/1/facade strategy.jpg" height="300" width="400">
     <h4><p>Facade Strategy</p></h4>
 
       </section>
