--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
         <h1><p>Project 2:</p>
         <p>Landscape, Vicksburg</p></h1>
         <h2><p>Portfolio</p></h2>
-        <img src="images/2/map1.jpg" height="150" width="200">
+        <img src="projects/images/2/map1.jpg" height="150" width="200">
         <h4><p>Vicksburg, MS</p></h4>
         <p></p>
         <h3><p><a href="1.html">Previous Project</a></p>
@@ -36,10 +36,10 @@
   <p></p>
   <h2><p>Landscape, Vicksburg</p></h2>
   <h3><p>2015</p></h3>
-  <img src="images/2/plan.jpg" height="400" width="400">
+  <img src="projects/images/2/plan.jpg" height="400" width="400">
   <h4><p>Landscape Re-Design Proposal</p></h4>
     
-  <img src="images/2/map2.png" height="350" width="300">
+  <img src="projects/images/2/map2.png" height="350" width="300">
     <h4><p>Site</p></h4>
     
     </div>
