--- a/3.html
+++ b/3.html
@@ -34,11 +34,11 @@
   <p></p>
   <h2><p>Espresso Art</p></h2>
   <h3><p>Summer 2015</p></h3>
-  <img src="images/3/1.jpg" height="300" width="400">
+  <img src="projects/images/3/1.jpg" height="300" width="400">
   <h4><p>Rose, June 20th</p>
-  <img src="images/3/2.jpg" height="300" width="400">
+  <img src="projects/images/3/2.jpg" height="300" width="400">
   <p>Mountain, June 29th</p>
-  <img src="images/3/3.jpg" height="300" width="400">
+  <img src="projects/images/3/3.jpg" height="300" width="400">
   <p>Dragon, July 1st</p></h4>
   
       </section>
