--- a/index.html
+++ b/index.html
@@ -106,14 +106,15 @@
 
 					<header class="special container">
 						<span class="icon fa-barcode"></span>
-						<h2> This is the ideal— the website, permanently <strong>-under construction-</strong> , will only gradually accumulate the requisite expansiveness.
+						<h2> This is the ideal— the website, permanently <strong>-under construction-</strong> , will only gradually accumulate the requisite expansiveness.</h2>
 						<br />
-						This website, built to display my interests, thoughts, and projects,</h2>
+						<p>
+						This website, built to display my interests, thoughts, and projects,
 						<br />
-						<p> 
 						is a spatial experiment, explorably winding and internal like Wonderland. Like a culture
 						<br />
-						it will spread, mutate, off-shoot; you’ll find yourself at blind ends or tripping wildly 						<br />
+						it will spread, mutate, off-shoot; you’ll find yourself at blind ends or tripping wildly 						
+						<br />
 						into deep recesses. Mapless, each trip to this site forges a unique path.
 						</p>
 					</header>
@@ -124,18 +125,17 @@
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>“A happy-weary walk through the darkening booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
+									<p>“A happy-weary walk through the darkening booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
 									<br />
-									—Theodore Sturgeon, More Than Human</h2>
+									—Theodore Sturgeon, More Than Human</p>
 									</header>
-									<p>Sed tristique purus vitae vdo.</p>
 									<footer>
 										<script type="text/javascript">
 										function randomlinks(){
-										    var myrandom=Math.round(Math.random()*9)
+										    var myrandom=Math.round(Math.random()*4)
 										    var links=new Array()
 										    links[0]="http://www.denversfbookclub.com/mrethnox.gif"
-										    links[1]="https://en.wikipedia.org/wiki/More_Than_Human" 											links[2]="http://www.loa.org/sciencefiction/gallery/Sturgeon/sturgeon3.jpg"										   											links[3]="https://hicventerhicsalta.files.wordpress.com/2011/09/a-mr-cool-vol-2-1960-25-brenda-2-1960-25-brenda4.jpg"
+										    links[1]="https://en.wikipedia.org/wiki/More_Than_Human" 											links[2]="http://www.loa.org/sciencefiction/gallery/Sturgeon/sturgeon3.jpg"																	links[3]="https://hicventerhicsalta.files.wordpress.com/2011/09/a-mr-cool-vol-2-1960-25-brenda-2-1960-25-brenda4.jpg"
  
 										    window.location=links[myrandom]
 										}
@@ -144,7 +144,7 @@
 										<input type="button" value="random link!" onClick="randomlinks()">
 										</form>
 										<ul class="buttons">
-											<li><a href="https://en.wikipedia.org/wiki/More_Than_Human" class="button">Find Out More</a></li>
+										<li><a href="https://en.wikipedia.org/wiki/More_Than_Human" class="button">Find Out More</a></li>
 										</ul>
 									</footer>
 
