--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 								<div class="8u 12u(narrower)">
 
 									<header>
-									<p>“A happy-weary walk through the darkening booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
+									<h3>“A happy-weary walk </h3>
+									<p>through the darkening booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
 									<br />
 									—Theodore Sturgeon, More Than Human</p>
 									</header>
