--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<h3>“A happy-weary walk through the darkening</h3>
 									booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
 									<br />
-									<p>—Theodore Sturgeon, <i>More Than Human</i></p>
+									<p>—Theodore Sturgeon, </p><p><i>More Than Human</i></p>
 									</header>
 									<footer>
 										<script type="text/javascript">
@@ -171,33 +171,33 @@
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span class="icon featured fa-chevron-left"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Poetry Blog</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<li><a href="http://sardinesandcappuccinos.blogspot.com/">An eclectic colleciton under an assumed name</a></li>
 									</section>
 
 								</div>
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span class="icon featured fa-chevron-up"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Want to laugh?</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<li><a href="http://oaurn.blogspot.com/">so click here</a></li>
 									</section>
 
 								</div>
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span class="icon featured fa-chevron-right"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>I need an Adventure Blog</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<li><a href="/">will hopefully go here</a></li>
 									</section>
 
 								</div>
@@ -208,7 +208,8 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2><strong>Featured Content</strong>
+								<p>Photographs</p></h2>
 							</header>
 
 							<div class="row">
