--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
 										    var myrandom=Math.round(Math.random()*4)
 										    var links=new Array()
 										    links[0]="http://www.denversfbookclub.com/mrethnox.gif"
-										    links[1]="https://en.wikipedia.org/wiki/More_Than_Human" 											links[2]="http://www.loa.org/sciencefiction/gallery/Sturgeon/sturgeon3.jpg"																	links[3]="https://hicventerhicsalta.files.wordpress.com/2011/09/a-mr-cool-vol-2-1960-25-brenda-2-1960-25-brenda4.jpg"
+										    links[1]="https://en.wikipedia.org/wiki/More_Than_Human" 		
+										    links[2]="http://www.loa.org/sciencefiction/gallery/Sturgeon/sturgeon3.jpg"	
+										    links[3]="https://hicventerhicsalta.files.wordpress.com/2011/09/a-mr-cool-vol-2-1960-25-brenda-2-1960-25-brenda4.jpg"
  
 										    window.location=links[myrandom]
 										}
