--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 										<input type="button" value="random link!" onClick="randomlinks()">
 										</form>
 										<ul class="buttons">
-										<li><a href="https://en.wikipedia.org/wiki/More_Than_Human" class="button">Find Out More</a></li>
+										<li><a href="https://en.wikipedia.org/wiki/More_Than_Human" class="button special">Find Out More</a></li>
 										</ul>
 									</footer>
 
