--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								<div class="4u 12u(narrower) important(narrower)">
 
 									<ul class="featured-icons">
-										<li><span class="icon fa-navicon"><span class="label">Feature 1</span></span></li>
+										<li><a href="http://fortawesome.github.io/Font-Awesome/icons/"></a><span class="icon fa-navicon"><span class="label">Feature 1</span></span></li>
 										<li><span class="icon fa-navicon"><span class="label">Feature 2</span></span></li>
 										<li><span class="icon fa-navicon"><span class="label">Feature 3</span></span></li>
 										<li><span class="icon fa-navicon"><span class="label">Feature 4</span></span></li>
