--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<h3>“A happy-weary walk through the darkening</h3>
 									booths to the late bus which waited, breathing. A sense of membership because of the fitting of the spine to the calculated average of the bus seats. A shared doze, a shared smile, at sixty miles and hour through the flickering night, and at last the familiar depot on the familiar street, echoing and empty but my street in my town.” 
 									<br />
-									<p>—Theodore Sturgeon, </p><p><i>More Than Human</i></p>
+									—Theodore Sturgeon,<p><i>More Than Human</i></p>
 									</header>
 									<footer>
 										<script type="text/javascript">
