--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<a href="#">Sans Computer<span class="icon fa-paint-brush"><span class="label">Feature</a>
 										<ul>
 											<li><a href="no-sidebar.html">Portraits</a></li>
-											<li><a href="no-sidebar.html">Landscapes</a></li>
+											<li><a href="2.html">Landscapes</a></li>
 											<li><a href="no-sidebar.html">Abstract/ Misc</a></li>
 											<li><a href="no-sidebar.html">Thinking Thoughts</a></li>
 										</ul>
@@ -58,7 +58,7 @@
 									<li class="submenu">
 										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
 										<ul>
-											<li><a href="no-sidebar.html">Zombie Bank</a></li>
+											<li><a href="1.html">Zombie Bank</a></li>
 											<li><a href="no-sidebar.html">Sublime Gym</a></li>
 											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
 											<li><a href="no-sidebar.html">Artichoke Age</a></li>
