Update and rename gym.html to bank.html

--- a/bank.html
+++ b/bank.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Twenty by HTML5 UP</title>
+		<title>Bank</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,25 +19,50 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">Portfolio <span>by Miranda Shugars</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+									<a href="#">Projects</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
-										<a href="#">Submenu</a>
+										<a href="#">Side Projects<span class="icon fa-cubes"><span class="label">Feature</a>
 										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
+											<li><a href="no-sidebar.html">All Saint's Revamp</a></li>
+											<li><a href="no-sidebar.html">Vicksburg Planning</a></li>
+											<li><a href="no-sidebar.html">Aesthetic Thoughts</a></li>
+										</ul>
+									</li>
+									<li class="submenu">
+										<a href="#">Sans Computer<span class="icon fa-paint-brush"><span class="label">Feature</a>
+										<ul>
+											<li><a href="no-sidebar.html">Portraits</a></li>
+											<li><a href="2.html">Landscapes</a></li>
+											<li><a href="no-sidebar.html">Abstract/ Misc</a></li>
+											<li><a href="no-sidebar.html">Thinking Thoughts</a></li>
+										</ul>
+									</li>
+									<li class="submenu">
+										<a href="#">Photography<span class="icon fa-camera"><span class="label">Feature</a>
+										<ul>
+											<li><a href="no-sidebar.html">Collection1</a></li>
+											<li><a href="no-sidebar.html">Collection2</a></li>
+											<li><a href="no-sidebar.html">Collection3</a></li>
+										</ul>
+									</li>
+									<li class="submenu">
+										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
+										<ul>
+											<li><a href="1.html">Zombie Bank</a></li>
+											<li><a href="no-sidebar.html">Sublime Gym</a></li>
+											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
+											<li><a href="no-sidebar.html">Artichoke Age</a></li>
+											<li><a href="no-sidebar.html">Thoughts on Architecture</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -52,8 +77,9 @@
 
 					<header class="special container">
 						<span class="icon fa-tablet"></span>
-						<h2>Behold the <strong>Right Sidebar</strong></h2>
-						<p>Where things on the right ... accompany that on the left.</p>
+						<h2><strong>Zombie Bank </strong>Long Island City, NY</h2>
+						<p>An exploration of post-apocalyptic architectural solutions</p>
+						<p>in the ruins of a 21st century financial institution.</p>
 					</header>
 
 					<!-- One -->
@@ -65,7 +91,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" /></a>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
 												</header>
@@ -93,6 +119,12 @@
 											</section>
 
 											<section>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
+												<img src="projects/images/1/sectionNOZOMBIES2.jpg" height="300" width="500">
+												<h4><p>In-site</p></h4>
+												    
+												<img src="projects/images/1/facade strategy.jpg" height="300" width="400">
+												<h4><p>Facade Strategy</p></h4>
 												<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 												<header>
 													<h3>Amet Lorem Tempus</h3>
