--- a/bank.html
+++ b/bank.html
@@ -92,6 +92,7 @@
 										<div class="content">
 											<section>
 												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" /></a>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
 												</header>
@@ -119,13 +120,10 @@
 											</section>
 
 											<section>
-												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
-												<img src="projects/images/1/sectionNOZOMBIES2.jpg" height="300" width="500">
-												<h4><p>In-site</p></h4>
-												    
-												<img src="projects/images/1/facade strategy.jpg" height="300" width="400">
+												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="" /></a>
 												<h4><p>Facade Strategy</p></h4>
-												<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2.jpg" alt="" /></a>
+												<h4><p>In-site</p></h4>
 												<header>
 													<h3>Amet Lorem Tempus</h3>
 												</header>
