--- a/bank.html
+++ b/bank.html
@@ -26,9 +26,6 @@
 							<li class="submenu">
 									<a href="#">Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
 										<a href="#">Side Projects<span class="icon fa-cubes"><span class="label">Feature</a>
@@ -76,7 +73,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon fa-tablet"></span>
+						<span class="icon fa-spinner"></span>
 						<h2><strong>Zombie Bank </strong>Long Island City, NY</h2>
 						<p>An exploration of post-apocalyptic architectural solutions</p>
 						<p>in the ruins of a 21st century financial institution.</p>
@@ -92,7 +89,7 @@
 										<div class="content">
 											<section>
 												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" /></a>
-												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"></script>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl" height=300 width=500></script>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
 												</header>
