--- a/bank.html
+++ b/bank.html
@@ -89,7 +89,7 @@
 										<div class="content">
 											<section>
 												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" /></a>
-												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl" height=300 width=500></script>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl"?height=300&width=500></script>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
 												</header>
