--- a/bank.html
+++ b/bank.html
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="facade strategy" /></a>
 												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl">?height=300&width=500</script>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
@@ -117,8 +117,8 @@
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="" /></a>
-												<h4><p>Facade Strategy</p></h4>
+												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" />concept sketch</a>
+												<h4><p>Concept Sketch</p></h4>
 												<a href="#" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2.jpg" alt="" /></a>
 												<h4><p>In-site</p></h4>
 												<header>
