--- a/bank.html
+++ b/bank.html
@@ -89,7 +89,7 @@
 										<div class="content">
 											<section>
 												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="facade strategy" /></a>
-												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl" class="image featured">?height=200&width=400</script>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl" class="image featured" height="200"width="400"></script>
 												<header>
 													<h3>Dolore Amet Consequat</h3>
 												</header>
