--- a/bank.html
+++ b/bank.html
@@ -95,8 +95,8 @@
 													<h3><p>Columbia University, Erica Goetz</p></h3>
 												</header>
 												<p>For this project I was asked to design a bank that would look toward the future of banking. I decided to examine the role of architecture as allegory, by creating a narrative through my building that describes the apocalyptic downfall of a corrupt banking industry, and the subsequent re-birth of a new kind of value system. Below is an excerpt from the statement I presented with my images.</p>
-												<h2><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
-												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></h2>
+												<h6><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
+												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></h6>
 												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl?height=300&width=500">3D Visualization</script>
 												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="" />Facade Strategy</a>
 											</section>
@@ -111,26 +111,25 @@
 												<header>
 													<h3>Magna Feugiat</h3>
 												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+												<p>Seder sed blandit commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
+														<li><a href="#" class="button small">Take Me There</a></li>
 													</ul>
 												</footer>
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" />concept sketch</a>
-												<h4><p>Concept Sketch</p></h4>
-												<a href="#" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2.jpg" alt="" /></a>
-												<h4><p>In-site</p></h4>
+												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" />Concept Sketch</a>
+												<!--<h4><p>Concept Sketch</p></h4>-->
+												<a href="#" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2.jpg" alt="" />In Site</a>
 												<header>
 													<h3>Amet Lorem Tempus</h3>
 												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+												<p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
+														<li><a href="#" class="button small">Click Here 4 Zombies</a></li>
 													</ul>
 												</footer>
 											</section>
@@ -205,7 +204,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Miranda Shugars</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
