--- a/bank.html
+++ b/bank.html
@@ -74,7 +74,7 @@
 
 					<header class="special container">
 						<span class="icon fa-spinner"></span>
-						<h2><strong>Zombie Bank </strong>Long Island City, NY</h2>
+						<h2><strong>Human Bank </strong>Long Island City, NY</h2>
 						<p>An exploration of post-apocalyptic architectural solutions</p>
 						<p>in the ruins of a 21st century financial institution.</p>
 					</header>
@@ -90,13 +90,12 @@
 											<section>
 												<a href="#" class="image featured"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render--Post</a>
 												<header>
-													<h3><p>Human Bank</p></h3>
-													<h3><p>Spring 2015</p></h3>
-													<h3><p>Columbia University, Erica Goetz</p></h3>
+													<h2><p>Human Bank</p></h2>
+													<h3><p>Spring 2015, Columbia University, Erica Goetz</p></h3>
 												</header>
 												<p>For this project I was asked to design a bank that would look toward the future of banking. I decided to examine the role of architecture as allegory, by creating a narrative through my building that describes the apocalyptic downfall of a corrupt banking industry, and the subsequent re-birth of a new kind of value system. Below is an excerpt from the statement I presented with my images.</p>
-												<h6><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
-												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></h6>
+												<blockquotes><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
+												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></blockquotes>
 												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl?height=300&width=500">3D Visualization</script>
 												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="" />Facade Strategy</a>
 											</section>
