--- a/bank.html
+++ b/bank.html
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render--Post</a>
+												<a href="#" class="image featured"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render (Post)</a>
 												<header>
 													<h2><p>Human Bank</p></h2>
 													<h3><p>Spring 2015, Columbia University, Erica Goetz</p></h3>
@@ -126,6 +126,7 @@
 													<h3>Amet Lorem Tempus</h3>
 												</header>
 												<p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+												<a href="#" class="image featured"><img src="projects/images/1/zombiesite strategies.jpg" alt="" />Site Strategies</a>
 												<footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Click Here 4 Zombies</a></li>
