--- a/bank.html
+++ b/bank.html
@@ -125,7 +125,7 @@
 												<header>
 													<h3>Amet Lorem Tempus</h3>
 												</header>
-												<p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+												<sub><p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p></sub>
 												<a href="#" class="image featured"><img src="projects/images/1/zombiesite strategies.jpg" alt="" />Site Strategies</a>
 												<footer>
 													<ul class="buttons">
