--- a/bank.html
+++ b/bank.html
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render (Post)</a>
+												<a href="#" class="image fit"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render (Post)</a>
 												<header>
 													<h2><p>Human Bank</p></h2>
 													<h3><p>Spring 2015, Columbia University, Erica Goetz</p></h3>
