--- a/bank.html
+++ b/bank.html
@@ -97,7 +97,7 @@
 												<blockquote><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
 												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></blockquote>
 												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl?height=300&width=500">3D Visualization</script>
-												<a href="#" class="image featured"><img src="projects/images/1/facade strategy.jpg" alt="" />Facade Strategy</a>
+												<a href="#" class="image fit"><img src="projects/images/1/facade strategy.jpg" alt="" />Facade Strategy</a>
 											</section>
 										</div>
 
@@ -192,7 +192,7 @@
 
 				</article>
 
-			<!-- Footer -->
+			<!-- Footer 
 				<footer id="footer">
 
 					<ul class="icons">
@@ -207,7 +207,7 @@
 						<li>&copy; Miranda Shugars</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
-				</footer>
+				</footer>-->
 
 		</div>
 
