--- a/bank.html
+++ b/bank.html
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image fit"><img src="projects/images/1/renderhippies.jpg" alt="" />Interior Render (Post)</a>
+												<a href="projects/images/1/renderhippies.jpg" class="image fit"><img src="projects/images/1/renderhippies_sm.jpg" alt="" />Interior Render (Post)</a>
 												<header>
 													<h3><p>Spring 2015, Columbia University, Erica Goetz</p></h3>
 												</header>
@@ -96,7 +96,7 @@
 												<blockquote><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
 												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></blockquote>
 												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl?height=300&width=500">3D Visualization</script>
-												<a href="#" class="image fit"><img src="projects/images/1/facade strategy.jpg" alt="" />Facade Strategy</a>
+												<a href="projects/images/1/facade strategy.jpg" class="image fit"><img src="projects/images/1/facade strategy_sm.jpg" alt="" />Facade Strategy</a>
 											</section>
 										</div>
 
@@ -118,14 +118,14 @@
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="projects/images/1/conceptsketch.jpg" alt="" />Concept Sketch</a>
+												<a href="projects/images/1/conceptsketch.jpg" class="image featured"><img src="projects/images/1/conceptsketch_sm.jpg" alt="" />Concept Sketch</a>
 												<!--<h4><p>Concept Sketch</p></h4>-->
-												<a href="#" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2.jpg" alt="" />In Site</a>
+												<a href="projects/images/1/sectionNOZOMBIES2.jpg" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2_sm.jpg" alt="" />In Site</a>
 												<header>
 													<h3>Amet Lorem Tempus</h3>
 												</header>
 												<sub><p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p></sub>
-												<a href="#" class="image featured"><img src="projects/images/1/zombiesite strategies.jpg" alt="" />Site Strategies</a>
+												<a href="projects/images/1/zombiesite strategies.jpg" class="image featured"><img src="projects/images/1/zombiesite strategies_sm.jpg" alt="" />Site Strategies</a>
 												<footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Click Here 4 Zombies</a></li>
