--- a/pearl.html
+++ b/pearl.html
@@ -55,7 +55,7 @@
 									<li class="submenu">
 										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
 										<ul>
-											<li><a href="1.html">Zombie Bank</a></li>
+											<li><a href="bank.html">Zombie Bank</a></li>
 											<li><a href="no-sidebar.html">Sublime Gym</a></li>
 											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
 											<li><a href="no-sidebar.html">Artichoke Age</a></li>
@@ -84,13 +84,17 @@
 							<!-- Content -->
 								<div class="content">
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="projects/images/ph1/1.jpg" class="image featured"><img src="projects/images/ph1/1_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/2.jpg" class="image featured"><img src="projects/images/ph1/2_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/3.jpg" class="image featured"><img src="projects/images/ph1/3_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/4.jpg" class="image featured"><img src="projects/images/ph1/4_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/5.jpg" class="image featured"><img src="projects/images/ph1/5_sm.jpg" alt="" /> Counting Fish </a>
 										<header>
 											<h3>Dolore Amet Consequat</h3>
 										</header>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
+										<p>Aliquam massa. Morbi eu faucibus massa. Aliquam mvel neque eros. Vestibulum diam.</p>
+										<p>Vestibus arcu tristique est.</p>
+										<a href="projects/images/ph1/6.jpg" class="image featured"><img src="projects/images/ph1/6_sm.jpg" alt="" /> City on Fire </a>
 									</section>
 								</div>
 
